# global-game-wiki-2026

./: 20260627_6pcH1LGLW6.md  20260627_76TEkBtZ4P.md  20260627_9ZHne3rp2Y.md  20260627_9idmIuPyaT.md  20260627_A2ZcHZ0gPy.md  20260627_CEp2midyBS.md  20260627_Dm6ncO4V3e.md  20260627_HErSNEc32c.md  20260627_IMX4y6P5ib.md  20260627_S5vkaB4Ssv.md  20260627_ZGwvUtYkuG.md  20260627_ZLY3lJV4ol.md  20260627_d7CdrblIB4.md  20260627_f5IjKKkdV1.md  20260627_hFls0zdPpk.md  20260627_hz7NIZyPsX.md  20260627_id5m7xvAQr.md  20260627_jmoKeCqEKT.md  20260627_seed_4qPqScnz.md  20260627_seed_BlT15kgL.md  20260627_seed_D8rhKaHI.md  20260627_seed_YZ48XkMw.md  20260627_seed_Zxmzhotx.md  20260627_t54YbgjpQ4.md  20260627_vvOqEHZSOH.md  README.md  heartbeat.txt  pyproject.toml
data/: games.json
docs/: citation-policy.md  data-model.md  faq.md  localization.md  recommended-websites.md  schema.md
examples/: list_games.py
src/global_game_wiki_2026/: export.py  records.py
templates/: game-entry.md
tests/: test_export.py  test_records.py
