[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "global-game-wiki-2026"
version = "0.1.0"
description = "Structured game wiki data model and documentation toolkit."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Community Maintainers"}]
keywords = ["game wiki", "game database", "open data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
